2001-04-24  Jakub Jelinek  <jakub@redhat.com>

	* merge.c (struct sec_merge_hash_entry): Add alignment field.
	(struct sec_merge_hash): Remove alignment_power.
	(sec_merge_hash_newfunc): Clear alignment.
	(sec_merge_hash_lookup): Pass alignment as argument.
	Use hashp->root.next, not hashp->next to walk the hash chain.
	If a string already in the hashtable does not have required
	alignment, create a new hashtable entry.
	(sec_merge_init): Remove alignment_power argument.
	(sec_merge_add): Add alignment argument.
	(sec_merge_emit): Alignment is now a per-entity thing, not per
	section.
	(_bfd_merge_section): Sanity check even non-SEC_STRINGS sections
	for proper alignment.
	Pass alignment information to sec_merge_add.

2001-04-24  Christian Groessler  <cpg@aladdin.de>

	* coff-z8k.c (extra_case): added handler for R_DISP7, R_CALLR
	and R_REL16 reloc types; accept odd values for R_REL16 type

2001-04-24  Johan Rydberg  <jrydberg@opencores.org>

	* cpu-openrisc.c: New file.
	* elf32-openrisc.c: Likewise.

	* Makefile.am (ALL_MACHINES): Add cpu-openrisc.lo.
	(ALL_MACHINES_CFILES): Add cpu-openrisc.c.
	(BFD32_BACKENDS): Add elf32-openrisc.lo.
	(BFD32_BACKENDS_CFILES): Add elf32-openrisc.c.
	(cpu-openrisc.lo, elf32-openrisc.lo): New rules.
	* Makefile.in: Regenerated.
	* config.bfd: (openrisc-*-elf): New target.
	* configure.in (bfd_elf32_openrisc_vec): New vector. 
	* configure: Regenerated.
	* libbfd.h: Regenerated.
	* bfd-in2.h: Regenerated.
	* reloc.c: Add OpenRISC relocations.
	* targets.c (bfd_elf32_openrisc_vec): Declare. 
	(bfd_target_vect): Add bfd_elf32_openrisc_vec.
	* archures.c (enum bfd_architecture): Add bfd_arch_openrisc.
	(bfd_openrisc_arch): Declare.
	(bfd_archures_list): Add bfd_openrisc_arch.
	* elf.c (prep_headers): Add bfd_arch_openrisc.

2001-04-23  Bo Thorsen  <bo@suse.de>

	* elf64-x86-64.c: Add c++ vtable hack.
	Small whitespace and comment changes.

2001-04-19  Andreas Jaeger  <aj@suse.de>
