@@ -1,3 +1,8 @@
+2001-04-25  Frank Ch. Eigler  <fche@redhat.com>
+
+	* bfd-in.h (bfd_cache_close): Declare newly exported function.
+	* bfd-in2.h: Regenerated.
+
 2001-04-24  Jakub Jelinek  <jakub@redhat.com>
 
 	* merge.c (struct sec_merge_hash_entry): Add alignment field.
